--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@picocss/pico": "^2.0.6",
+    "@vercel/analytics": "^1.3.1",
     "next": "14.2.15",
     "react": "^18",
     "react-dom": "^18"
