--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "@picocss/pico": "^2.0.6",
+    "@supabase/ssr": "^0.5.1",
+    "@supabase/supabase-js": "^2.45.5",
     "@vercel/analytics": "^1.3.1",
     "next": "14.2.15",
     "react": "^18",
